fixed UI alignments

--- a/src/components/HeaderStockSearch/HeaderStockSearch.scss
+++ b/src/components/HeaderStockSearch/HeaderStockSearch.scss
@@ -6,6 +6,7 @@ $header-background-color: #daa520;
 	display: flex;
 	flex-flow: row nowrap;
 	justify-content: flex-start;
+	padding-left: 0.5rem;
 	align-items: center;
 	background-color: $header-background-color;
 }
