--- a/src/components/ParameterData/ParameterData.scss
+++ b/src/components/ParameterData/ParameterData.scss
@@ -1,25 +1,23 @@
 $background-color: #1e1e1e;
 
-#data-container {
+#data-container,
+#one-year-data,
+#five-year-data,
+#ten-year-data {
 	background-color: $background-color;
 	display: flex;
+}
+
+#data-container {
 	justify-content: space-evenly;
 	flex-flow: row nowrap;
 	flex-basis: 30%;
-	padding: 0.5rem;
 }
 
-#one-year-data {
-	background-color: $background-color;
-	flex-basis: calc(100% / 3);
-}
-
-#five-year-data {
-	background-color: $background-color;
-	flex-basis: calc(100% / 3);
-}
-
+#one-year-data,
+#five-year-data,
 #ten-year-data {
-	background-color: $background-color;
+	align-items: center;
+	justify-content: center;
 	flex-basis: calc(100% / 3);
 }
